--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ add_definitions(-D__KERNEL__)
 add_definitions(-D__x86_64__)
 add_definitions(-DCONFIG_DEBUG_LIST)
 add_definitions(-DCONFIG_INET)
+add_definitions(-DCONFIG_SECURITY_NETWORK)
 set(kernel_base ${CMAKE_CURRENT_SOURCE_DIR}/linux-4.19.248)
 
 include_directories(${kernel_base}/include)
@@ -16,11 +17,12 @@ include(cmake/kernel.cmake)
 include(cmake/lib.cmake)
 include(cmake/mm.cmake)
 include(cmake/driver_base.cmake)
+include(cmake/security.cmake)
 add_library(kernel OBJECT
 	${net_src}
 	${core_src}
 	${lib_src}
 	${mm_src}
 	${driver_base_src}
-
+	${security_src}
 )
