--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,15 @@ add_definitions(-DCONFIG_BPF_JIT)
 add_definitions(-DCONFIG_HAVE_EBPF_JIT)
 add_definitions(-DCONFIG_KALLSYMS)
 add_definitions(-DCONFIG_MODULES)
+add_definitions(-DCONFIG_SYSCTL)
+add_definitions(-DCONFIG_PROC_SYSCTL)
+add_definitions(-DCONFIG_AUDITSYSCALL)
+add_definitions(-DCONFIG_PROC_FS)
+add_definitions(-DCONFIG_BPF)
+add_definitions(-DCONFIG_CGROUP_BPF)
+add_definitions(-DCONFIG_CGROUPS)
+add_definitions(-DCONFIG_SOCK_CGROUP_DATA)
+add_definitions(-DCONFIG_NET)
 
 set(kernel_base ${CMAKE_CURRENT_SOURCE_DIR}/linux-4.19.248)
 
